Fixed 'Portfolio' on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ section > h2 {
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .portfolio > div {
